--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   mix: ^1.1.0
+  url_launcher: ^6.3.0
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +66,9 @@ flutter:
     - assets/images/flutter_icon.png
     - assets/images/android_icon.png
     - assets/images/react_icon.png
+    - assets/images/linkedin.png
+    - assets/images/instagram.png
+    - assets/images/github.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
