--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   mix: ^1.1.0
   url_launcher: ^6.3.0
   gap: ^3.0.1
+  m3_carousel: ^1.0.2
+  scrollable_positioned_list: ^0.3.8
+  scroll_to_index: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +72,7 @@ flutter:
     - assets/images/linkedin.png
     - assets/images/instagram.png
     - assets/images/github.png
+    - assets/gallery/pugs_and_me.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
