--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ flutter:
     - assets/images/instagram.png
     - assets/images/github.png
     - assets/gallery/pugs_and_me.png
+    - assets/gallery/chihuahua_door.png
+    - assets/gallery/tec_graduate.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
