--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,6 @@ dependencies:
   auto_route_generator: ^8.0.0
   lottie: ^3.1.2
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -81,6 +80,7 @@ flutter:
     - assets/gallery/chihuahua_door.png
     - assets/gallery/tec_graduate.png
     - assets/animations/fox.json
+    - assets/jobs/controlla_icon.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
