--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   lottie: ^3.1.2
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  flutter_tilt: ^3.0.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
