--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
     - assets/gallery/tec_graduate.png
     - assets/animations/fox.json
     - assets/jobs/controlla_icon.png
+    - assets/projects/gallery.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
